static/css/base.css
/* -------------------------------- Custom CSS Variables */

:root{
  --brand-pink: #F4A1B9;
  --brand-dark-pink: #f194ae;
}

/* -------------------------------- General Classes */

.bg-brand { background-color: var(--brand-pink);}
.text-brand { color: var(--brand-pink);}
.btn-brand { background-color: var(--brand-pink);}
.btn-brand:hover { background-color: var(--brand-dark-pink);}

.zoom-hover { transition-duration: 200ms }
.zoom-hover:hover { scale: 1.25; }

/* -------------------------------- General Styling */

/* -------------------------------- Nav Styling */

.nav-link { border-color: white; }
.nav-link:hover { border-bottom: 3px solid var(--brand-dark-pink); }

/* -------------------------------- Hero Image */

#hero-image-container {
  background: url('/media/hero-image.webp') no-repeat center center fixed;
  height: 70vh;
  background-size: cover;
  background-color: #555;
  background-blend-mode: overlay;
}

/* -------------------------------- Media Queries */

/* Larger container on xxl screens */
@media (min-width: 1400px) {
  
  .container {
    max-width: 1340px;
  }
}

/* Media Queries for screens smaller than 992px */
@media (max-width: 992px) {

  /* Reposition hero image */
  #hero-image-container {
    background-position: 40%;
  }

  /* Resize logo */
  .nav-logo img {
    height: 50px;
  }
}

